--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "optionalDependencies": {
     "tough-cookie": ">=0.12.0",
-    "form-data": "~0.1.0",
+    "form-data": "https://github.com/petreboy14/node-form-data/tarball/master",
     "tunnel-agent": "~0.4.0",
     "http-signature": "~0.10.0",
     "oauth-sign": "~0.3.0",
